# afn-backend

./: .env  Cargo.toml
migrations/2023-03-04-221512_schedule/: down.sql  up.sql
migrations/2023-03-12-171938_panel authors/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/scheduling/: create.rs  delete.rs  get.rs  update.rs
